# plutus-trading

./: .env.example  .gitignore  CLAUDE.md  FIX_REPORT.md  Plutus_Trading_System.md  README.md  TRADING_WORKFLOW.md  pyproject.toml  requirements.txt  run_chronos.py
.claude/hooks/: pre-commit-gate.sh
.claude/skills/: microstructure_expert.md  quant_auditor.md
.github/workflows/: test.yml
backups/src_backtest_20260303_091906/: __main__.py  aggressive_strategy.py  complete_strategy.py  complete_trading_system.py  data_client.py  ema_strategy.py  engine.py  improved_strategy.py  llm_strategy.py  optimized_strategy.py  production_strategy.py  simple_fetch.py  simple_strategy.py  strategy.py  time_based.py  workflow_strategy.py
backups/strategies_archive/: ema_strategy.py  llm_strategy.py  optimize_aggressive.py  production_strategy.py  simple_strategy.py  workflow_strategy.py
config/: risk_limits.yaml
docker/: Dockerfile.quant_worker  docker-compose.yml  execution_node.Dockerfile  nginx.conf  plutus_engine.Dockerfile  scanner.Dockerfile
docker/init-scripts/: 001_init.sql
docs/: LUNA_CRASH_AUTOPSY.md  TRADING_UNIVERSE.md  V4_DATABASE.md  V4_DATA_SOURCING.md  V4_EXECUTION.md  V4_IMPLEMENTATION_CHECKLIST.md  V4_INFRASTRUCTURE.md  V4_META_LEARNING.md  V4_PORTFOLIO_MATRIX.md
scripts/: download_data.py  launch_matrix.sh  spawn_sandbox.sh  swarm_backtest.sh
src/: __init__.py  cli.py  config.py
src/analysis/: __init__.py  (+3 more)
tests/: conftest.py  test_decision_engine.py  test_indicators.py  test_llm_client.py  test_position_sizer.py  test_regressions.py
(+73 files in other folders)
