[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plutus-trading"
version = "3.1.0"
description = "Plutus V3 MoE Trading Floor with Reflexion Memory Matrix"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0,<2.33.0",
    "numpy>=1.26.0,<2.0.0",
    "pandas>=2.0.0,<3.0.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "requests-mock>=1.11.0",
]

[project.scripts]
plutus-backtest = "src.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/.venv/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
